Termine de hacer el manual de usuario y el manual tecnico, echenle un ojo al pdf