@@ -24,7 +24,6 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 	{
 		Interfaz ventanaGrafica = new Interfaz();
 		ventanaGrafica.setVisible(true); // se abra la ventana en la ejecucion
-		System.out.println("Ubicacion actual en: " +  System.getProperty("user.dir"));
 	}
 
 	/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -43,16 +42,25 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 
 			JTextField 	txtUser, // panel login
 						txtNombre,txtApp,txtApm,txtCargo,txtSueldo,txtNominaNum,txtFechaIngreso,
-						txtDiasTrabajdos,txtAsignaciones, txtDeducciones; // panel details
+						txtDiasTrabajdos,
+						txtBonos,txtFeriados,
+						txtHorasExtra, txtAsignacionesOtros,
+						txtIVA, txtISR,
+						txtPrestamos, txtDeduccionesOtros; // panel details
 
 			JPasswordField txtPass;
 			JLabel lblTitulo,lblStatus;
 			JList<String> list;
 			DefaultListModel<String> listModel;
+			JScrollPane listScroller;
+            boolean editar = false;
+            int indice = 0;
+            double ivaGlobal = 16;
+            String bdCSV = "bd.csv";
 		/* ====== Base de datos (Arreglo bidimensional) ==== */
-		String[][] bd = new String [100][10];
+		String[][] bd = new String [100][15];
 			/*
-			-Cada renglón es una nómina
+			-Cada renglon es una nómina
 			-Cada columna es un valor:
 				0) Nombre
 				1) Apellido Paterno
@@ -61,9 +69,14 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 				4) Cargo
 				5) Sueldo (80-...)
 				6) Días Trabajados (1-365)
-				7) Asignaciones
-				8) Deducciones
-				9) Fecha de Ingreso (dd/mm/aa)
+				7) Horas extra
+				8) Bonos
+                9) Otras asignaciones
+                10) IVA (16%)
+                11) Feriados
+                12) Prestamos
+                13) Otras deducciones
+				14) Fecha de Ingreso (dd/mm/aaaa)
 			*/
 		/* =============================================== */
 	public Interfaz()
@@ -73,7 +86,7 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 			setResizable(false); // desabilita la opcion de cambiar tamanio
 			setSize(new java.awt.Dimension(1000, 550));// Establecer tamanio
 			setTitle("miSueldo");//titulo de la ventana
-			setLayout(new java.awt.GridBagLayout());//para ordenar los elementos con coordenadas
+			setLayout(new java.awt.GridBagLayout());//para ordenar los elementos con cordenadas
 		/* ========================================== */
 
 		/* ===Armando la interfaz=== */
@@ -81,7 +94,7 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 			panelLogIn = new JPanel(); // panel derecho area log in
 			//panelLogIn.setBackground(new java.awt.Color(187, 72, 72)); //dar color
 			panelLogIn.setLayout(new java.awt.GridLayout(3,1,0,5));// ordenar elementos (3 paneles)
-				panelLogInAux = new JPanel();// panel aux contendrá al label Log in
+				panelLogInAux = new JPanel();// panel aux contendra al label Log in
 					panelLogInAux.setLayout(new java.awt.BorderLayout());// posicionar la etiqueta
 					panelLogInAux.add(new JLabel("                Log in"),java.awt.BorderLayout.SOUTH);
 				panelLogInContent = new JPanel();// tendra textfields
@@ -110,7 +123,7 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 						panelMainButtons = new JPanel();//panel para los botones dentro del maintitle
 						panelMainButtons.setBackground(new java.awt.Color(189, 195, 199));
 							btnAgregar = new JButton("Nuevo");
-							btnAgregar.setToolTipText("Crear nuevo empleado");
+							btnAgregar.setToolTipText("Crear nuevo perfil");
 							panelMainButtons.add(btnAgregar);
 							btnReportesGrales = new JButton("Generar Reportes");
 							btnReportesGrales.setToolTipText("Genera el reporte para todos los empleados");
@@ -126,13 +139,15 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 					//generar  la lista!
 					listModel = new DefaultListModel<>();
 					list = new JList<>();
-					list.setPreferredSize(new java.awt.Dimension(140,400));
 					list.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);
-					JScrollPane scrollPane = new JScrollPane(list);
+					listScroller = new JScrollPane();
 					actualizaList();// llena con lo que hay en la bd
+					listScroller.setViewportView(list);
+					list.setLayoutOrientation(JList.VERTICAL);
 					// fin generacion lista
 				panelMainList.add(new JLabel("Empleados(nominas)"),java.awt.BorderLayout.NORTH);
-				panelMainList.add(list);
+				panelMainList.add(listScroller);
+
 				panelBtnActVerBorrar = new JPanel();// panel que tendra el boton de borrar
 					btnBorrar = new JButton("Borrar");
 					btnBorrar.setToolTipText("Eliminar el empleado seleccionado");
@@ -162,7 +177,7 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 					panelDetailsButtons.add(btnReporteInd);
 
 				panelDetailsControles = new JPanel(); // panel con todos las datos
-				panelDetailsControles.setLayout(new java.awt.GridLayout(10,2,-50,20)); // para ordenar 10 filas x 2 columnas
+				panelDetailsControles.setLayout(new java.awt.GridLayout(16,4)); // para ordenar 10 filas x 2 columnas
 					panelDetailsControles.add(new JLabel("Nombre:"));
 					txtNombre = new JTextField(8);
 					txtNombre.setToolTipText("ej. Fernando");
@@ -170,20 +185,20 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 
 					panelDetailsControles.add(new JLabel("Apellido Paterno:"));
 					txtApp = new JTextField(8);
-					txtApp.setToolTipText("ej. Pérez");
+					txtApp.setToolTipText("ej. Perez");
 					panelDetailsControles.add(txtApp);
 
 					panelDetailsControles.add(new JLabel("Apellido Materno:"));
 					txtApm = new JTextField(8);
-					txtApm.setToolTipText("ej. Pérez");
+					txtApm.setToolTipText("ej. Perez");
 					panelDetailsControles.add(txtApm);
 
 					panelDetailsControles.add(new JLabel("Cargo:"));
 					txtCargo = new JTextField(8);
-					txtCargo.setToolTipText("puesto o ocupacion en la empresa");
+					txtCargo.setToolTipText("Puesto u ocupacion en la empresa");
 					panelDetailsControles.add(txtCargo);
 
-					panelDetailsControles.add(new JLabel("Sueldo Base ($):"));
+					panelDetailsControles.add(new JLabel("Salario Base ($):"));
 					txtSueldo = new JTextField(8);
 					txtSueldo.setToolTipText("$$$");
 					panelDetailsControles.add(txtSueldo);
@@ -203,13 +218,47 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 					txtDiasTrabajdos.setToolTipText("ej. 14");
 					panelDetailsControles.add(txtDiasTrabajdos);
 
-					panelDetailsControles.add(new JLabel("Asignaciones:"));
-					txtAsignaciones = new JTextField(8);
-					panelDetailsControles.add(txtAsignaciones);
+					panelDetailsControles.add(new JLabel("Bonos: "));
+					txtBonos = new JTextField(8);
+					txtBonos.setToolTipText("Bonos extra $$$");
+					panelDetailsControles.add(txtBonos);
 
-					panelDetailsControles.add(new JLabel("Deducciones:"));
-					txtDeducciones = new JTextField(8);
-					panelDetailsControles.add(txtDeducciones);
+					panelDetailsControles.add(new JLabel("Dias feriados: "));
+					txtFeriados = new JTextField(8);
+					txtFeriados.setToolTipText("Dias feriados, ej. 4");
+					panelDetailsControles.add(txtFeriados);
+
+					panelDetailsControles.add(new JLabel("Horas Extra: "));
+					txtHorasExtra = new JTextField(8);
+					txtHorasExtra.setToolTipText("Cantidad de horas trabajas extra, ej. 3");
+					panelDetailsControles.add(txtHorasExtra);
+
+
+					panelDetailsControles.add(new JLabel("Otros Asignaciones:"));
+					txtAsignacionesOtros = new JTextField(8);
+					txtAsignacionesOtros.setToolTipText("Otras Asignaciones que se deban considerar $$$");
+					panelDetailsControles.add(txtAsignacionesOtros);
+
+
+					panelDetailsControles.add(new JLabel("IVA:"));
+					txtIVA = new JTextField(8);
+					txtIVA.setToolTipText("Deducciones por IVA %");
+					panelDetailsControles.add(txtIVA);
+
+					panelDetailsControles.add(new JLabel("ISR:"));
+					txtISR = new JTextField(8);
+					txtISR.setToolTipText("Deducciones por ISR %");
+					panelDetailsControles.add(txtISR);
+
+					panelDetailsControles.add(new JLabel("Prestamos:"));
+					txtPrestamos = new JTextField(8);
+					txtPrestamos.setToolTipText("Deducciones en prestamos $$$");
+					panelDetailsControles.add(txtPrestamos);
+
+					panelDetailsControles.add(new JLabel("Otras deducciones:"));
+					txtDeduccionesOtros = new JTextField(8);
+					txtDeduccionesOtros.setToolTipText("Otras deducciones que se deban considerar $$$");
+					panelDetailsControles.add(txtDeduccionesOtros);
 
 				panelDetailsSaveCancel = new JPanel(); // panel que tendra boton de guardar
 					btnGuardar = new JButton("Guardar");
@@ -222,7 +271,6 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 			panelDetails.add(panelDetailsButtons,java.awt.BorderLayout.NORTH);//quede hasta arriba
 			panelDetails.add(panelDetailsControles);//cubra lo que sobre
 			panelDetails.add(panelDetailsSaveCancel,java.awt.BorderLayout.SOUTH);//que hasta abajo
-			//panelDetails.setEnabled(false);////***** false para que se habilite cuando se loguee
 		//panel Footer
 			panelFooter = new JPanel();
 			panelFooter.setBackground(new java.awt.Color(238, 238, 238));
@@ -302,7 +350,7 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 		/* ============================================ */
 
 		/* ==== Agregar eventos a los controles ==== */
-			// Inicio y cierre de sesión
+			// Inicio y cierre de sesion
 			btnIngresar.addActionListener(new IngresarAlSistema());
 			btnIngresar.addActionListener(new LectorCSV());
 			btnCerrar.addActionListener(new CerrarElSistema());
@@ -312,13 +360,16 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 			btnVer.addActionListener(new VerDetallesEmpleado());
 			btnEditar.addActionListener(new EditarEmpleado());
 			btnActualizar.addActionListener(new ActualizaJList());
-			// Adición a BD
+			// Adicion a BD
 			btnGuardar.addActionListener(new AgregaraBD());
-			btnReportesGrales.addActionListener(new EscritorExcel());
+			btnReportesGrales.addActionListener(new GenerarReportes());
+            btnReporteInd.addActionListener(new GenerarReporte());
+            // Borrar de BD
+            btnBorrar.addActionListener(new BorrardeBD());
 
 			//quitar en production
-			txtUser.setText("rob");
-			txtPass.setText("123");
+			//txtUser.setText("rob");
+			//txtPass.setText("123");
 		/* ========================================== */
 	}
 	/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -326,10 +377,11 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 	/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-	~~~~~~~~~CREACIÓN DE MÉTODOS PARA LOS CONTROLES~~~~~~~~~~
+	~~~~~~~~~CREACION DE METODOS PARA LOS CONTROLES~~~~~~~~~~
 	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 	/* ######agregar a los controles instanciados los eventos#####*/
 		boolean session = false;
+    // Actualiza la lista para que se vean los usuarios que han sido agregados o que no se van los que se borraron
 	public class ActualizaJList implements ActionListener
 		{
 			public void actionPerformed(ActionEvent e)
@@ -337,7 +389,7 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 				actualizaList();
 			}
 		}
-	// Iniciar Sesión
+	// Iniciar Sesion
 		public class IngresarAlSistema implements ActionListener
 		{
 			public void actionPerformed(ActionEvent e)
@@ -380,35 +432,69 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 			}
 		}
 	//clic en ver
-		public class VerDetallesEmpleado implements ActionListener
-		{
-			public void actionPerformed(ActionEvent e)
-			{
-				if(!list.isSelectionEmpty())// o sea si selecciono alguien
-				{
+		public class VerDetallesEmpleado implements ActionListener {
+			public void actionPerformed(ActionEvent e) {
+            double isr, base, salario, nomina, hExtra, bono, asignaciones, prestamos, deducciones;
+            int diasF, dias, index;
+
+                if (!list.isSelectionEmpty()) {// Si selecciono a alguien
+                    index = list.getSelectedIndex();
+                    base = Double.parseDouble(bd[index][5]);
+                    hExtra = Double.parseDouble(bd[index][7]);
+                    bono = Double.parseDouble(bd[index][8]);
+                    asignaciones = Double.parseDouble(bd[index][9]);
+                    prestamos = Double.parseDouble(bd[index][12]);
+                    deducciones = Double.parseDouble(bd[index][13]);
+                    diasF = Integer.parseInt(bd[index][11]);
+                    dias = Integer.parseInt(bd[index][6]);
+                    salario = base*dias;
+                    nomina = salario+bono+(hExtra*base)+(diasF*3*base)+asignaciones-prestamos-deducciones;
+                    //Cálculo de ISR para que se vea despues de dar click en ver
+                    isr = calcISR(nomina,"t");
+
 					btnReporteInd.setEnabled(true);
 					btnEditar.setEnabled(true);
 					btnCancelar.setEnabled(true);
+
 					lblStatus.setText("Desplegando detalles de empleado seleccionado");
-				}
-				else
-				{
+                        txtNombre.setText(bd[index][0]);// Nombre
+                        txtApp.setText(bd[index][1]);// APP
+                        txtApm.setText(bd[index][2]);// APM
+                        txtNominaNum.setText(bd[index][3]);// No. Nomina
+                        txtCargo.setText(bd[index][4]);// Cargo
+                        txtSueldo.setText(bd[index][5]);// Sueldo
+                        txtDiasTrabajdos.setText(bd[index][6]);// Días Trabajados
+                        txtHorasExtra.setText(bd[index][7]);// Horas Extra
+                        txtBonos.setText(bd[index][8]);// Bonos
+                        txtAsignacionesOtros.setText(bd[index][9]);// Otras asignaciones
+                        txtIVA.setText(Double.toString(ivaGlobal)+"%");
+                        txtISR.setText(Double.toString(isr)+"%");
+                        txtFeriados.setText(bd[index][11]);// Dias feriados
+                        txtPrestamos.setText(bd[index][12]);// Prestamos
+                        txtDeduccionesOtros.setText(bd[index][13]);// Otras deducciones
+                        txtFechaIngreso.setText(bd[index][14]);// Fecha de Ingreso
+                        deshabilitaMainPanel();
+                }
+				else {
 					JOptionPane.showMessageDialog(null,"Por favor seleccione a alguien", "miSueldo",
 					JOptionPane.WARNING_MESSAGE);
 				}
-				System.out.print("index selccionado: "+list.getSelectedIndex());
-				System.out.println(", valor en el index: "+list.getSelectedValue());
-			}
-		}
+            }
+        }
 	//clic en editar
 		public class EditarEmpleado implements ActionListener
 		{
 			public void actionPerformed(ActionEvent e)
 			{
+
+                indice = list.getSelectedIndex();
+                editar = true;
 				habiltaPanelDetails();
 				deshabilitaMainPanel();
 				btnReporteInd.setEnabled(false);
+				btnEditar.setEnabled(false);
 				lblStatus.setText("Modificando datos");
+
 			}
 		}
 	//clic en nuevo
@@ -416,6 +502,7 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 		{
 			public void actionPerformed(ActionEvent e)
 			{
+				list.clearSelection();
 				habiltaPanelDetails();
 				limpiaTextFields();
 				deshabilitaMainPanel();
@@ -441,7 +528,7 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 			{
 				if(session)
 				{
-					JOptionPane.showMessageDialog(null,"Se cerrará la sesión", "miSueldo",
+					JOptionPane.showMessageDialog(null,"Se cerrara la sesión", "miSueldo",
 					JOptionPane.WARNING_MESSAGE);
 				}
 				dispose();
@@ -457,61 +544,60 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 		public void actualizaList()
 		{
 			listModel.removeAllElements();
-			String nombreArchivo = "bd.csv", datosLeidos;
-			int filas=100;
-			String[] listaLeida = new String[filas];
-			try
-			{
-				FileReader lectorBD = new FileReader(nombreArchivo);
-				BufferedReader brBD = new BufferedReader(lectorBD);
-				while((datosLeidos = brBD.readLine())!=null)
-				{
-					listaLeida = datosLeidos.split(",");
-					listModel.addElement(listaLeida[0]+" - "+listaLeida[3]);
-
-				}
-				lectorBD.close();
-				list.setModel(listModel);
-			}
-			catch(IOException e)
-			{
-				System.out.println("no hay archivo");
-			}
+		          for (int i = 0; i < bd.length; i++) {
+                      if (bd[i][0] == null) continue;
+                    listModel.addElement(bd[i][0]+" - "+bd[i][3]);
+                  }
+                  list.setModel(listModel);
 		}
 		public void habiltaPanelDetails()//cuando presiona editar
 		{
-			txtNombre.setEnabled(true);
-			txtApp.setEnabled(true);
-			txtApm.setEnabled(true);
-			txtCargo.setEnabled(true);
-			txtSueldo.setEnabled(true);
-			txtNominaNum.setEnabled(true);
-			txtFechaIngreso.setEnabled(true);
-			txtDiasTrabajdos.setEnabled(true);
-			txtAsignaciones.setEnabled(true);
-			txtDeducciones.setEnabled(true);
+			txtNombre.setEditable(true);
+			txtApp.setEditable(true);
+			txtApm.setEditable(true);
+			txtCargo.setEditable(true);
+			txtSueldo.setEditable(true);
+			txtNominaNum.setEditable(true);
+			txtFechaIngreso.setEditable(true);
+			txtDiasTrabajdos.setEditable(true);
+			txtAsignacionesOtros.setEditable(true);
+			txtDeduccionesOtros.setEditable(true);
 			btnCancelar.setEnabled(true);
 			btnGuardar.setEnabled(true);
 			//btnReporteInd.setEnabled(true);
 			btnEditar.setEnabled(true);
+			txtBonos.setEditable(true);
+			txtFeriados.setEditable(true);
+			txtHorasExtra.setEditable(true);
+			txtIVA.setEditable(false);
+            txtIVA.setEnabled(false);
+			txtISR.setEditable(false);
+            txtISR.setEnabled(false);
+			txtPrestamos.setEditable(true);
 		}
 		public void deshabilitaPanelDetails()
 		{
 			limpiaTextFields();
-			txtNombre.setEnabled(false);
-			txtApp.setEnabled(false);
-			txtApm.setEnabled(false);
-			txtCargo.setEnabled(false);
-			txtSueldo.setEnabled(false);
-			txtNominaNum.setEnabled(false);
-			txtFechaIngreso.setEnabled(false);
-			txtDiasTrabajdos.setEnabled(false);
-			txtAsignaciones.setEnabled(false);
-			txtDeducciones.setEnabled(false);
+			txtNombre.setEditable(false);
+			txtApp.setEditable(false);
+			txtApm.setEditable(false);
+			txtCargo.setEditable(false);
+			txtSueldo.setEditable(false);
+			txtNominaNum.setEditable(false);
+			txtFechaIngreso.setEditable(false);
+			txtDiasTrabajdos.setEditable(false);
+			txtAsignacionesOtros.setEditable(false);
+			txtDeduccionesOtros.setEditable(false);
 			btnCancelar.setEnabled(false);
 			btnGuardar.setEnabled(false);
 			btnReporteInd.setEnabled(false);
 			btnEditar.setEnabled(false);
+			txtBonos.setEditable(false);
+			txtFeriados.setEditable(false);
+			txtHorasExtra.setEditable(false);
+			txtIVA.setEditable(false);
+			txtISR.setEditable(false);
+			txtPrestamos.setEditable(false);
 		}
 		public void limpiaTextFields()
 		{
@@ -524,9 +610,15 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 			txtNominaNum.setText("");
 			txtFechaIngreso.setText("");
 			txtDiasTrabajdos.setText("");
-			txtAsignaciones.setText("");
-			txtDeducciones.setText("");
+			txtAsignacionesOtros.setText("");
+			txtDeduccionesOtros.setText("");
 			list.clearSelection();
+			txtBonos.setText("");
+			txtFeriados.setText("");
+			txtHorasExtra.setText("");
+			txtIVA.setText("");
+			txtISR.setText("");
+			txtPrestamos.setText("");
 		}
 		public void habiltaMainPanel()
 		{
@@ -544,7 +636,7 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 			btnReportesGrales.setEnabled(false);
 			btnBorrar.setEnabled(false);
 			list.setEnabled(false);
-			list.clearSelection();
+			//list.clearSelection();
 			btnVer.setEnabled(false);
 			btnActualizar.setEnabled(false);
 		}
@@ -558,30 +650,43 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 				   sldo = txtSueldo.getText(),
 				   numNomina =txtNominaNum.getText(),
 				   dias = txtDiasTrabajdos.getText(),
-				   asignaciones = txtAsignaciones.getText(),
-				   deducciones = txtDeducciones.getText();
+                   horasExtra = txtHorasExtra.getText(),
+                   bonos = txtBonos.getText(),
+				   asignaciones = txtAsignacionesOtros.getText(),
+                   isr = txtISR.getText(),
+                   prestamos = txtPrestamos.getText(),
+				   deducciones = txtDeduccionesOtros.getText();
             String[] palabras = {nomb, app, apm, cargo,};
             boolean noError = true;
 
 			// Texto
-			if (!nomb.matches("^[a-zA-z]+[áéíóí]?(\\s[a-zA-Z][áéíóú]?|[a-zA-Z][áéíóú]?)*$")) {JOptionPane.showMessageDialog(null,"Error en dato: Nombre"); noError = false;}
-			if (!app.matches("^[a-zA-z]+[áéíóí]?(\\s[a-zA-Z][áéíóú]?|[a-zA-Z][áéíóú]?)*$")) {JOptionPane.showMessageDialog(null,"Error en dato: Apellido Paterno"); noError = false;}
-			if (!apm.matches("^[a-zA-z]+[áéíóí]?(\\s[a-zA-Z][áéíóú]?|[a-zA-Z][áéíóú]?)*$"))  {JOptionPane.showMessageDialog(null,"Error en dato: Apellido Materno"); noError = false;}
-			if (!cargo.matches("^\\w+[áéíóú]?(-|\\s\\w+|\\w+)*$"))  {JOptionPane.showMessageDialog(null,"Error en dato: Cargo"); noError = false;}
+			if (!nomb.matches("^[a-zA-z]+[áéíóí]?(\\s[a-zA-Z][áéíóú]?|[a-zA-Z][áéíóú]?)*$")) {JOptionPane.showMessageDialog(null,"Error en dato: Nombre \n *Solo puedes usar letras \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE);noError = false;}
+			if (!app.matches("^[a-zA-z]+[áéíóí]?(\\s[a-zA-Z][áéíóú]?|[a-zA-Z][áéíóú]?)*$")) {JOptionPane.showMessageDialog(null,"Error en dato: Apellido Paterno \n *Solo puedes usar letras \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+			if (!apm.matches("^[a-zA-z]+[áéíóí]?(\\s[a-zA-Z][áéíóú]?|[a-zA-Z][áéíóú]?)*$"))  {JOptionPane.showMessageDialog(null,"Error en dato: Apellido Materno \n *Solo puedes usar letras \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+			if (!cargo.matches("^\\w+[áéíóú]?(-?\\s?\\w+?)*$"))  {JOptionPane.showMessageDialog(null,"Error en dato: Cargo \n *Solo puedes usar letras \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
 			// Número
             if (!fecha.matches("(\\d|[1-2][0-9]|30)\\/(\\d|[1][0-2])\\/(200[0-9]|201[0-7])")) {
-                JOptionPane.showMessageDialog(null,"Error en dato: Fecha"); noError = false;
+                JOptionPane.showMessageDialog(null,"Error en dato: Fecha \n *Usa el formato d/m/yyyy \n *No puede estar vacío \n *No puede haber fechas futuras", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;
             }
-			if (!sldo.matches("\\d+(\\.\\d+)?")) {JOptionPane.showMessageDialog(null,"Error en dato: Sueldo"); noError = false;}
-			if (!numNomina.matches("\\d{3}")) {JOptionPane.showMessageDialog(null,"Error en dato: No. de Nómina"); noError = false;}
-                else {// Verifica que la nómina no exista
-                    for (int i = 0; i < bd[3].length; i++) {
-                        if (numNomina.equals(bd[3][i])) {JOptionPane.showMessageDialog(null,"No. de Nómina ocupado."); noError = false;}
+			if (!sldo.matches("\\d+(\\.\\d+)?")) {JOptionPane.showMessageDialog(null,"Error en dato: Sueldo \n *Solo usa numeros \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+			if (!numNomina.matches("\\d{3}")) {JOptionPane.showMessageDialog(null,"Error en dato: No. de Nómina \n *Usa formato XXX \n *Solo usa números \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+                else if (editar) {// Verifica que la nómina no exista
+                    for (int i = 0; i < bd[0].length; i++) {
+                        if (indice == i) continue;
+                        if (numNomina.equals(bd[i][3])) {JOptionPane.showMessageDialog(null,"No. de Nomina ocupado.","Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
 					}
                 }
-			if (!dias.matches("^([0-9]?[0-9]|[1-2][0-9][0-9]|3[0-5][0-9]|36[0-5])$")) {JOptionPane.showMessageDialog(null,"Error en dato: Días trabajados"); noError = false;}
-			if (!asignaciones.matches("\\d+(\\.\\d+)?")) {JOptionPane.showMessageDialog(null,"Error en dato: Asignaciones"); noError = false;}
-			if (!deducciones.matches("\\d+(\\.\\d+)?")) {JOptionPane.showMessageDialog(null,"Error en dato: Deducciones"); noError = false;}
+                else {// Verifica que la nómina no exista
+                    for (int i = 0; i < bd[3].length; i++) {
+                        if (numNomina.equals(bd[i][3])) {JOptionPane.showMessageDialog(null,"No. de Nomina ocupado.","Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+    				}
+                }
+			if (!dias.matches("^([0-9]?[0-9]|[1-2][0-9][0-9]|3[0-5][0-9]|36[0-5])$")) {JOptionPane.showMessageDialog(null,"Error en dato: Dias trabajados \n *Solo numeros \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+            if (!horasExtra.matches("^(\\d|1?[0-9]?[0-9]?[0-9]|2[0-8][0-9][0-9]|29[0-2][0-9]|293[0-6])$")) {JOptionPane.showMessageDialog(null,"Error en dato: Horas extra \n *Solo números (0-2936) \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+            if (!bonos.matches("\\d+(\\.\\d+)?")) {JOptionPane.showMessageDialog(null,"Error en dato: Bonos \n *Solo numeros \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+			if (!asignaciones.matches("\\d+(\\.\\d+)?")) {JOptionPane.showMessageDialog(null,"Error en dato: Asignaciones \n *Solo numeros \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+            if (!prestamos.matches("^\\d+(\\.\\d+)?$")) {JOptionPane.showMessageDialog(null,"Error en dato: Préstamos \n *Solo numeros o numeros decimales \n *Sin signo de porcentaje\n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
+			if (!deducciones.matches("^\\d+(\\.\\d+)?$")) {JOptionPane.showMessageDialog(null,"Error en dato: Deducciones \n *Solo numeros \n *No puede estar vacio", "Error al Guardar",JOptionPane.ERROR_MESSAGE); noError = false;}
 
             return noError;// Regresa si las validaciones fueron correctas.
         }
@@ -603,10 +708,65 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
                             letra = texto.codePointAt(i + 1);
                             texto = texto.substring(0, i + 1) + String.valueOf(Character.toChars(letra - 32)) + texto.substring(i + 2, l);
                         }
+                    }
                 }
-            }
             return texto;
-        }
+            }
+        public double calcISR(double sueldo, String regresaValor){
+		double tasa=0;
+		double cuotaFija=0;
+
+		if (sueldo>=0.01 && sueldo<=496.07) {
+
+			sueldo-=0.01;
+			tasa=.0195;
+		}else if (sueldo>=496.08 && sueldo<=4210.41) {
+			sueldo -= 496.08;
+			cuotaFija =9.52;
+			tasa = .0640;
+		}else if (sueldo>=4210.42 && sueldo<=7399.42) {
+			sueldo -=4210.42;
+			cuotaFija = 247.24;
+			tasa = .1088;
+		}else if (sueldo>=7399.43 && sueldo<=8601.50) {
+			sueldo -= 7399.43;
+			cuotaFija = 594.21;
+			tasa = .16;
+		}else if (sueldo>=8601.51 && sueldo<=10298.35) {
+			sueldo -= 8601.51;
+			cuotaFija = 786.54;
+			tasa = .1792;
+		}else if (sueldo>=10298.36 && sueldo<=20770.29) {
+			sueldo -= 20298.36;
+			cuotaFija = 1090.61;
+			tasa = .2136;
+		}else if (sueldo>=20770.30 && sueldo<=32736.83) {
+			sueldo -= 20770.30;
+			cuotaFija = 3327.42;
+			tasa = .2352;
+		}else if (sueldo>=32736.84 && sueldo<=62500.00) {
+			sueldo -= 32736.84;
+			cuotaFija = 6141.95;
+			tasa = .30;
+		}else if (sueldo>=62500.01 && sueldo<=83333.33) {
+			sueldo -= 62500.01;
+			cuotaFija = 15070.90;
+			tasa = .32;
+		}else if (sueldo>=83333.34 && sueldo<=250000.00) {
+			sueldo -= 83333.34;
+			cuotaFija = 21737.57;
+			tasa = .34;
+		}else{
+			sueldo -= 250000.01;
+			cuotaFija = 78404.23;
+			tasa = .35;
+		}
+		sueldo-=(tasa*sueldo);
+		sueldo+=cuotaFija;
+        if (regresaValor.equals("s")) return sueldo;
+        else if (regresaValor.equals("t")) return tasa*100;
+        else return sueldo;
+	}
 	/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 	~~~~~~~~~~~~~~~~~~FIN MÉTODOS AUXILIARES~~~~~~~~~~~~~~~~~
 	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -616,36 +776,61 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 	public class AgregaraBD implements ActionListener {
 		public void actionPerformed(ActionEvent e) {
-			String command = e.getActionCommand();
-			int indice = 0;
-			boolean error = validacion();
+			boolean noError = validacion();
 
-		if (error) {
-			for (int i = 0; i < bd.length; i++) {
+            if (noError && !editar) {
+                for (int i = 0; i < bd.length; i++) {
 				if (bd[i][0] == null) { // Si el espacio no esta asignado
-					System.out.println("Si entro");
-					indice = i;
-					// Asignar todos los valores colocados a esa nómina
+					//System.out.println("Si entro");
+					// Asignar todos los valores colocados a esa nomina
 					bd[i][0] = aMayus(txtNombre.getText());
 					bd[i][1] = aMayus(txtApp.getText());
 					bd[i][2] = aMayus(txtApm.getText());
 					bd[i][3] = txtNominaNum.getText();
 					bd[i][4] = aMayus(txtCargo.getText());
 					bd[i][5] = txtSueldo.getText();
-					bd[i][6] = txtDiasTrabajdos.getText();
-					bd[i][7] = txtAsignaciones.getText();
-					bd[i][8] = txtDeducciones.getText();
-					bd[i][9] = txtFechaIngreso.getText();
+                    bd[i][6] = txtDiasTrabajdos.getText();
+                    bd[i][7] = txtHorasExtra.getText();
+                    bd[i][8] = txtBonos.getText();
+                    bd[i][9] = txtAsignacionesOtros.getText();
+                    bd[i][10] = Double.toString(ivaGlobal);
+                    bd[i][11] = txtFeriados.getText();
+                    bd[i][12] = txtPrestamos.getText();
+                    bd[i][13] = txtDeduccionesOtros.getText();
+					bd[i][14] = txtFechaIngreso.getText();
 					deshabilitaPanelDetails();
 					habiltaMainPanel();
 					limpiaTextFields();
-					JOptionPane.showMessageDialog(null,bd[i][0] + " " + bd[i][1] + " " + bd[i][2] + "\nRegistrado con nómina: " + bd[i][3]);
-					actualizaList();
-						break;
+					JOptionPane.showMessageDialog(null,bd[i][0] + " " + bd[i][1] + " " + bd[i][2] + "\nRegistrado con nomina: " + bd[i][3]);
+					break;
 					}
 				}
-				escritorCSV(indice);
+                escritorCSV();
+				actualizaList();
 			}
+            else if (noError && editar) {
+                bd[indice][0] = aMayus(txtNombre.getText());
+                bd[indice][1] = aMayus(txtApp.getText());
+                bd[indice][2] = aMayus(txtApm.getText());
+                bd[indice][3] = txtNominaNum.getText();
+                bd[indice][4] = aMayus(txtCargo.getText());
+                bd[indice][5] = txtSueldo.getText();
+                bd[indice][6] = txtDiasTrabajdos.getText();
+                bd[indice][7] = txtHorasExtra.getText();
+                bd[indice][8] = txtBonos.getText();
+                bd[indice][9] = txtAsignacionesOtros.getText();
+                bd[indice][10] = Double.toString(ivaGlobal);
+                bd[indice][11] = txtFeriados.getText();
+                bd[indice][12] = txtPrestamos.getText();
+                bd[indice][13] = txtDeduccionesOtros.getText();
+                bd[indice][14] = txtFechaIngreso.getText();
+                deshabilitaPanelDetails();
+                habiltaMainPanel();
+                limpiaTextFields();
+                escritorCSV();
+				actualizaList();
+                JOptionPane.showMessageDialog(null,bd[indice][0] + " " + bd[indice][1] + " " + bd[indice][2] + "\nNomina editada: " + bd[indice][3]);
+            }
 		}
 	}
 
@@ -655,17 +840,15 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 			int contador = 0;
 			BufferedReader br = null;
 			String linea = "",
-			separador = ",",
-			command = event.getActionCommand(),
-			csv = System.getProperty("user.dir")+"/bd.csv"; // El archivo que se quiera utilizar como base de datos siempre se debe imprimir
-			File archivo = new File(csv);
+			separador = ",";
+			File archivo = new File(bdCSV);
                 try {
 					if (!archivo.exists()) archivo.createNewFile();
 					br = new BufferedReader(new FileReader(archivo));
 					while ((linea = br.readLine()) != null) { // Mientras el archivo tenga valores
-                        String[] perfil = linea.split(separador); // Crear un arreglo con los valores de la línea
-						for (int i = 0;i < bd.length; i++) { // Corrobora que espacio de la base de datos esta vacío
-							if (bd[i][0] == null) { // Si el espacio esta vacío asigna los valores de la línea a la base de datos
+                        String[] perfil = linea.split(separador); // Crear un arreglo con los valores de la linea
+						for (int i = 0;i < bd.length; i++) { // Corrobora que espacio de la base de datos esta vacio
+							if (bd[i][0] == null) { // Si el espacio esta vacio asigna los valores de la linea a la base de datos
 								bd[i][0] = perfil[0];
 								bd[i][1] = perfil[1];
 								bd[i][2] = perfil[2];
@@ -676,6 +859,11 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 								bd[i][7] = perfil[7];
 								bd[i][8] = perfil[8];
 								bd[i][9] = perfil[9];
+                                bd[i][10] = Double.toString(ivaGlobal);
+                                bd[i][11] = perfil[11];
+                                bd[i][12] = perfil[12];
+                                bd[i][13] = perfil[13];
+                                bd[i][14] = perfil[14];
 								contador++;
 								break;
 							}
@@ -685,6 +873,9 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 						e.printStackTrace();
 				} catch (IOException e) {
 						e.printStackTrace();
+				}
+				catch(ArrayIndexOutOfBoundsException ex){
+					System.out.println("bd vacia LectorCSV");
 				} finally {
 					if (br != null) {
 						try {
@@ -694,26 +885,37 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
                             }
                     }
 				}
+                actualizaList();
             }
         }
     public class BorrardeBD implements ActionListener {
         public void actionPerformed(ActionEvent e) {
-
+            int index;
+            if (!list.isSelectionEmpty()) {
+                index = list.getSelectedIndex();
+                for (int i = 0; i < bd[0].length; i++) {
+                    bd[index][i] = null;
+                }
+                escritorCSV();
+                actualizaList();
+            }
+            else {
+                JOptionPane.showMessageDialog(null,"Por favor seleccione a alguien", "miSueldo",
+                JOptionPane.WARNING_MESSAGE);
+            }
         }
     }
-	public class EscritorExcel implements ActionListener {
+	public class GenerarReportes implements ActionListener {
 		public void actionPerformed(ActionEvent event) {
-
-<<<<<<< HEAD
-			String command = event.getActionCommand(), d = "", os;
-=======
-			String command = event.getActionCommand(), d = "", os = "";
->>>>>>> 7388399e5215ea01368acc1ef2a146fadd831d92
+            String d = "", os = "";
 			BufferedWriter be = null;
 			String perfiles = "";
-			double sueldo, dias, asignaciones, deducciones, nomina;
+            int dias;
+			double base, salario, hExtra, diasF, bono, asignaciones, prestamos ,deducciones, nomina, iva , isr;
 
-			d = System.getProperty("user.dir") + "/reporte.csv";
+
+
+			d = "reporte.csv";
             os = System.getProperty("os.name");
 
 			try {
@@ -722,93 +924,217 @@ public class Interfaz extends JFrame // extends por que es una clase que hereda 
 					reporte.createNewFile(); //Crea el archivo del reporte
 					be = new BufferedWriter(new FileWriter(reporte));
 					for (int i = -1; i < bd.length; i++) {
-						if (i == -1) { // Escribe los títulos de columna para el reporte
+						if (i == -1) { // Escribe los titulos de columna para el reporte
 							be.append("Nombre,");
 							be.append("Apellido Paterno,");
 							be.append("Apellido Materno,");
-							be.append("No. Nómina,");
+							be.append("No. Nomina,");
 							be.append("Cargo,");
-							be.append("Sueldo,");
-							be.append("Días Trabajados,");
-							be.append("Asignaciones,");
-							be.append("Deducciones,");
+							be.append("Salario,");
+							be.append("Dias Trabajados,");
+							be.append("Horas Extra,");
+                            be.append("Bonos,");
+                            be.append("Otras Asignaciones,");
+							be.append("IVA (%),");
+                            be.append("Dias Feriados,");
+                            be.append("Prestamos,");
+                            be.append("Otras Deducciones,");
 							be.append("Fecha de Ingreso,");
-							be.append("Nómina Calculada\n");
+                            be.append("Salario,");
+                            be.append("Nomina bruta,");
+                            be.append("IVA aplicado,");
+                            be.append("ISR aplicado,");
+                            be.append("Nomina neta\n");
 							continue;
 						}
 
-						// Escribe al reporte
-
+						// Si la nómina no está asignada continua
 						if (bd[i][0] == null) continue;
+                        // Asigna los valores a las variables
+                        base = Double.parseDouble(bd[i][5]);
+                        dias = Integer.parseInt(bd[i][6]);
+                        hExtra = Double.parseDouble(bd[i][7]);
+                        bono = Double.parseDouble(bd[i][8]);
+                        asignaciones = Double.parseDouble(bd[i][9]);
+                        diasF = Integer.parseInt(bd[i][11]);
+                        prestamos = Double.parseDouble(bd[i][12]);
+                        deducciones = Double.parseDouble(bd[i][13]);
+
+                        // Escribe al reporte
 						be.append(bd[i][0]+",");// Nombre
 						be.append(bd[i][1]+",");// APP
 						be.append(bd[i][2]+",");// APM
-						be.append(bd[i][3]+",");// No. Nómina
+						be.append(bd[i][3]+",");// No. Nomina
 						be.append(bd[i][4]+",");// Cargo
 						be.append(bd[i][5]+",");// Sueldo
 						be.append(bd[i][6]+",");// Días Trabajados
-						be.append(bd[i][7]+",");// Asignaciones
-						be.append(bd[i][8]+",");// Deducciones
-						be.append(bd[i][9]+",");// Fecha de Ingreso
-						//Cálculo de nómina
-						sueldo = Double.parseDouble(bd[i][5]);
-						dias = Double.parseDouble(bd[i][6]);
-						asignaciones = Double.parseDouble(bd[i][7]);
-						deducciones = Double.parseDouble(bd[i][8]);
-						nomina = sueldo*dias+asignaciones-deducciones;
-						be.append(Double.toString(nomina)+"\n");// Nómina
+						be.append(bd[i][7]+",");// Horas Extra
+						be.append(bd[i][8]+",");// Bonos
+						be.append(bd[i][9]+",");// Otras asignaciones
+                        be.append(bd[i][10]+",");// IVA
+                        be.append(bd[i][11]+",");// Dias feriados
+                        be.append(bd[i][12]+",");// Prestamos
+                        be.append(bd[i][13]+",");// Otras deducciones
+                        be.append(bd[i][14]+",");// Fecha de Ingreso
+						//Cálculo de nomina
+                        salario = base*dias;
+                        be.append(salario+",");
+                        nomina = salario+bono+(hExtra*base)+(diasF*3*base)+asignaciones-prestamos-deducciones;
+                        be.append(nomina+",");
+                        iva = (nomina*ivaGlobal/100);
+                        be.append(iva+",");
+                        isr = calcISR(nomina,"s");
+                        be.append(isr+",");
+                        nomina -= isr+iva;
+                        be.append(nomina+"\n");
 					}
-                    if (os.equals("Mac OS X")) Runtime.getRuntime().exec(new String[]{"open",d});
-                    if (os.equals("Linux")) Runtime.getRuntime().exec(new String[] {"xdg-open",d});
-                    //if (os.equals("")) Runtime.getRuntime();exec(new String[] {"",d});
-<<<<<<< HEAD
-=======
-				}
->>>>>>> 7388399e5215ea01368acc1ef2a146fadd831d92
-			}  catch (IOException ioe) {
-				ioe.printStackTrace();
-				}
+                    if (os.equals("Mac OS X"))
+                    {
+                    	Runtime.getRuntime().exec(new String[]{"open",d});
+                    }
+                    else if (os.equals("Linux"))
+                    {
+                    	Runtime.getRuntime().exec(new String[] {"xdg-open",d});
+                    }
+                    else if (os.contains("Windows"))
+                    {
+                    	JOptionPane.showMessageDialog(null,"Se abrira en bloc de notas \n", "miSueldo",
+						JOptionPane.WARNING_MESSAGE);
+                    	Runtime.getRuntime().exec(new String[]{"notepad",d});
+                 	}
+
+                }  catch (IOException ioe) {
+				                ioe.printStackTrace();
+                    }
 				finally {
-					try {
+                    try {
 						if (be != null) be.close();
-					} catch (Exception ex) {
+                    } catch (Exception ex) {
 						System.out.println("Error in closing the BufferedWriter"+ex);
 					}
 				}
 			}
 		}
-		public void escritorCSV(int indice) {
+        public class GenerarReporte implements ActionListener {
+    		public void actionPerformed(ActionEvent event) {
+                String d = "", os = "";
+    			BufferedWriter be = null;
+    			String perfiles = "";
+                int dias, index;
+    			double base, salario, hExtra, diasF, bono, asignaciones, prestamos ,deducciones, nomina, iva , isr;
+
+                os = System.getProperty("os.name");
+                index = list.getSelectedIndex();
+                d = "reporte"+bd[index][1]+".csv";
+                // Asigna los valores a las variables
+                base = Double.parseDouble(bd[index][5]);
+                dias = Integer.parseInt(bd[index][6]);
+                hExtra = Double.parseDouble(bd[index][7]);
+                bono = Double.parseDouble(bd[index][8]);
+                asignaciones = Double.parseDouble(bd[index][9]);
+                diasF = Integer.parseInt(bd[index][11]);
+                prestamos = Double.parseDouble(bd[index][12]);
+                deducciones = Double.parseDouble(bd[index][13]);
+                salario = base*dias;
+                nomina = salario+bono+(hExtra*base)+(diasF*3*base)+asignaciones-prestamos-deducciones;
+                iva = (nomina*ivaGlobal/100);
+                isr = calcISR(nomina,"s");
+
+    			try {
+    					File reporte = new File(d); // Especifica el nombre del archivo para el reporte
+    					if (reporte.exists()) reporte.delete();
+    					reporte.createNewFile(); //Crea el archivo del reporte
+    					be = new BufferedWriter(new FileWriter(reporte));
+
+    							be.append("Nombre,"+bd[index][0]+"\n");
+    							be.append("Apellido Paterno,"+bd[index][1]+"\n");
+    							be.append("Apellido Materno,"+bd[index][2]+"\n");
+    							be.append("No. Nomina,"+bd[index][3]+"\n");
+    							be.append("Cargo,"+bd[index][4]+"\n");
+    							be.append("Salario,"+bd[index][5]+"\n");
+    							be.append("Dias Trabajados,"+bd[index][6]+"\n");
+    							be.append("Horas Extra,"+bd[index][7]+"\n");
+                                be.append("Bonos,"+bd[index][8]+"\n");
+                                be.append("Otras Asignaciones,"+bd[index][9]+"\n");
+    							be.append("IVA (%),"+bd[index][10]+"\n");
+                                be.append("Dias Feriados,"+bd[index][11]+"\n");
+                                be.append("Prestamos,"+bd[index][12]+"\n");
+                                be.append("Otras Deducciones,"+bd[index][13]+"\n");
+    							be.append("Fecha de Ingreso,"+bd[index][14]+"\n");
+                                be.append("Salario,"+salario+"\n");
+
+                                be.append("Nomina bruta,"+nomina+"\n");
+                                be.append("IVA aplicado,"+iva+"\n");
+                                be.append("ISR aplicado,"+isr+"\n");
+                                nomina -= isr+iva;
+                                be.append("Nomina neta,"+nomina+"\n");
+
+	                       if (os.equals("Mac OS X"))
+	                    {
+	                    	Runtime.getRuntime().exec(new String[]{"open",d});
+	                    }
+	                    else if (os.equals("Linux"))
+	                    {
+	                    	Runtime.getRuntime().exec(new String[] {"xdg-open",d});
+	                    }
+	                    else if (os.contains("Windows"))
+	                    {
+	                    	JOptionPane.showMessageDialog(null,"Se abrira en bloc de notas \n", "miSueldo",
+							JOptionPane.WARNING_MESSAGE);
+	                    	Runtime.getRuntime().exec(new String[]{"notepad",d});
+	                 	}
+
+                    }  catch (IOException ioe) {
+    				                ioe.printStackTrace();
+                        }
+    				finally {
+                        try {
+    						if (be != null) be.close();
+                        } catch (Exception ex) {
+    						System.out.println("Error in closing the BufferedWriter"+ex);
+    					}
+    				}
+    			}
+    		}
+		public void escritorCSV() {
 			BufferedWriter bw = null;
+            try {
+                d = "bd.csv";
+                File archivoCSV = new File(d);
+                bw = new BufferedWriter(new FileWriter(archivoCSV));
+                for (int i = 0; i < bd.length; i++) {
+                    if (bd[i][0] == null) continue;
 
-			try {
-				File archivoCSV = new File(System.getProperty("user.dir")  + "/bd.csv");
-				if (!archivoCSV.exists()) archivoCSV.createNewFile();
-				bw = new BufferedWriter(new FileWriter(archivoCSV));
-					bw.append(bd[indice][0] + ",");
-					bw.append(bd[indice][1] + ",");
-					bw.append(bd[indice][2] + ",");
-					bw.append(bd[indice][3] + ",");
-					bw.append(bd[indice][4] + ",");
-					bw.append(bd[indice][5] + ",");
-					bw.append(bd[indice][6] + ",");
-					bw.append(bd[indice][7] + ",");
-					bw.append(bd[indice][8] + ",");
-					bw.append(bd[indice][9] + "\n");
-			} catch (FileNotFoundException e1) {
-					e1.printStackTrace();
-			} catch (IOException e1) {
-					e1.printStackTrace();
-			} finally {
-				if (bw != null) {
-					try {
-						bw.close();
-					} catch (IOException e1) {
-						e1.printStackTrace();
-					}
-				}
-			}
-
-		}
+        			bw.append(bd[i][0] + ",");
+        			bw.append(bd[i][1] + ",");
+        			bw.append(bd[i][2] + ",");
+        			bw.append(bd[i][3] + ",");
+        			bw.append(bd[i][4] + ",");
+    				bw.append(bd[i][5] + ",");
+        			bw.append(bd[i][6] + ",");
+        			bw.append(bd[i][7] + ",");
+        			bw.append(bd[i][8] + ",");
+                    bw.append(bd[i][9] + ",");
+                    bw.append(bd[i][10] + ",");
+                    bw.append(bd[i][11] + ",");
+                    bw.append(bd[i][12] + ",");
+                    bw.append(bd[i][13] + ",");
+        			bw.append(bd[i][14] + "\n");
+                }
+        	} catch (FileNotFoundException e1) {
+                e1.printStackTrace();
+            } catch (IOException e1) {
+                e1.printStackTrace();
+            } finally {
+                if (bw != null) {
+                    try {
+                        bw.close();
+                    } catch (IOException e1) {
+                        e1.printStackTrace();
+                    }
+                }
+            }
+        }
 	/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 	~~~~~~~~~~~~~~~~~~FIN MÉTODOS BD~~~~~~~~~~~~~~~~~
 	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
